# Persona_Webscraping

./: .env  QUICKSTART.md  README.md  main.py  pyproject.toml  requirements.txt  response-example.json  test.sh
doc/: ARCHITECTURE.md  MIGRATION_GUIDE.md  QUICKSTART.md  README.md  SUMMARY.md
src/: main.py
src/routes/: chat.py  llm.py  response.txt  search.py
src/services/: appollo_provider.py  openrouter.py  orchestrator.py  perplexity_sdk.py  persona_extractor.py  prompt.py  search.py
src/services/providers/: moonshot.py
src/types/: orchestrator_plan.py
